# joy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  release-plz.toml
.codex/: AGENTS.md  bug-bash-playbook.md  documentation-playbook.md  refactor-playbook.md
.github/workflows/: check.yaml  docs.yaml  release-plz.yaml  release.yaml  security.yaml
Formula/: joy.rb
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/theme/: custom.css
docs/: error-codes.md  machine-interface.md  releasing.md
notes/: 2026-02-24_14aabda_phase4-local-build-engine.md  2026-02-24_68f879a_phase3-header-only-git-cache.md  2026-02-24_dbdcb0e_phase2-manifest-add-env.md  README.md  roadmap.md
notes/active/: 2026-02-24_43755eb_ci-parity-and-windows-ci-fixes.md  2026-02-24_8dd0c6e_pre-merge-cleanup-and-archive.md  2026-02-24_build-pipeline-stage-split-for-lockfile-work.md  2026-02-24_dependency-ux-commands-phase11.md  2026-02-24_fetch-retry-backoff-for-transient-network-errors.md  2026-02-24_lockfile-error-guidance-polish.md  2026-02-24_lockfile-locked-package-validation.md  2026-02-24_lockfile-package-population.md  2026-02-24_manifest-multifile-schema-fields.md  2026-02-24_multifile-build-graph-and-ninja-support.md  2026-02-24_offline-and-frozen-runtime-flags.md  README.md  next-work.md  (+26 more)
packaging/: README.md
recipes/: STARTER_SET.md  index.toml
src/: abi.rs  cli.rs  cmake.rs  error.rs  fetch.rs  fs_ops.rs  git_ops.rs  global_cache.rs  install_index.rs  lib.rs  linking.rs  lockfile.rs  main.rs  manifest.rs  ninja.rs  output.rs  package_coordinate.rs  package_id.rs  project_env.rs  project_probe.rs  recipes.rs  registry.rs  registry_config.rs  resolver.rs  templates.rs  toolchain.rs
tests/: add_command.rs  build_run.rs  cli_scaffold.rs  lockfile_behavior.rs  multi_source_dependency_commands.rs  publish_command.rs  recipe_smoke.rs  smoke.rs
(+82 files in other folders)
