[package]
name = "joy"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
flate2 = "1.1.0"
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
semver = "1.0.27"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.16"
toml = "0.8.20"
petgraph = "0.6.5"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
which = "7.0.2"
indicatif = "0.17.11"

[dev-dependencies]
assert_cmd = "2.0.16"
mockito = "1.7.0"
predicates = "3.1.2"
tempfile = "3.17.1"
