[package]
name = "joy"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
semver = "1.0.27"
sha2 = "0.10.9"
thiserror = "2.0.16"
toml = "0.8.20"
petgraph = "0.6.5"
which = "7.0.2"
indicatif = "0.17.11"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.17.1"
